force-app/main/default/objects/Test_Cases__c/Test_Cases__c.object-meta.xml
<CustomObject>
    <label>Test Cases</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Test Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>