force-app/main/default/objects/Test_Cases__c/fields/Default_Resolver__c.field-meta.xml
<CustomField>
    <fullName>Default_Resolver__c</fullName>
    <description>NEED TO UPDATE</description>
    <formula>&apos;0058C000000cs8VQAQ&apos;</formula>
    <label>Default Resolver</label>
    <type>Text</type>
</CustomField>