force-app/main/default/objects/Test_Cases__c/fields/Expected_Result_Cont__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result_Cont__c</fullName>
    <label>Expected Result Cont.</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>