force-app/main/default/objects/Test_Cases__c/fields/Feedback_Enhancement_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Enhancement_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback/Enhancement Submitted</label>
    <type>Checkbox</type>
</CustomField>