force-app/main/default/objects/Test_Cases__c/fields/MTC_Version__c.field-meta.xml
<CustomField>
    <fullName>MTC_Version__c</fullName>
    <formula>Master_Test_Case__r.Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTC Version</label>
    <type>Text</type>
</CustomField>