force-app/main/default/objects/Test_Cases__c/fields/Organization_Group__c.field-meta.xml
<CustomField>
    <fullName>Organization_Group__c</fullName>
    <label>Organization Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organization_Group_UATAPP</valueSetName>
    </valueSet>
</CustomField>