force-app/main/default/objects/Test_Cases__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>Persona</description>
    <inlineHelpText>Persona</inlineHelpText>
    <label>Persona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>