force-app/main/default/objects/Test_Cases__c/fields/Production_Actual_Results__c.field-meta.xml
<CustomField>
    <fullName>Production_Actual_Results__c</fullName>
    <label>Production Actual Results</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>