force-app/main/default/objects/Test_Cases__c/fields/Production_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Complete_Date__c</fullName>
    <label>Production Complete Date</label>
    <type>Date</type>
</CustomField>