force-app/main/default/objects/Test_Cases__c/fields/Production_Status__c.field-meta.xml
<CustomField>
    <fullName>Production_Status__c</fullName>
    <label>Production Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pending Issue</fullName>
            </value>
            <value>
                <fullName>Ready for reset</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Defer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>