force-app/main/default/objects/Test_Cases__c/fields/Production_Tester__c.field-meta.xml
<CustomField>
    <fullName>Production_Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>