force-app/main/default/objects/Test_Cases__c/fields/Requirement_Details__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Details__c</fullName>
    <description>Requirement Details</description>
    <inlineHelpText>Requirement Details</inlineHelpText>
    <label>Requirement Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>