force-app/main/default/objects/Test_Cases__c/fields/Requirement_ID__c.field-meta.xml
<CustomField>
    <fullName>Requirement_ID__c</fullName>
    <description>Requirement ID from Task Ray</description>
    <inlineHelpText>Requirement ID from Task Ray</inlineHelpText>
    <label>Requirement ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>