force-app/main/default/objects/Test_Cases__c/fields/Running_User_Tester__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Tester__c</fullName>
    <formula>IF(
    $User.Id = Tester__c,
    TRUE,
    FALSE
)</formula>
    <label>Running User = Tester</label>
    <type>Checkbox</type>
</CustomField>