force-app/main/default/objects/Test_Cases__c/fields/Task_Group__c.field-meta.xml
<CustomField>
    <fullName>Task_Group__c</fullName>
    <inlineHelpText>Task Group from Task Ray</inlineHelpText>
    <label>Task Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>