force-app/main/default/objects/Test_Cases__c/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <description>Task ID from Task Ray</description>
    <inlineHelpText>Task ID from Task Ray</inlineHelpText>
    <label>Task ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>