force-app/main/default/objects/Test_Cases__c/fields/Test_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Number__c</fullName>
    <description>Test Case ID for storing unique ID for this case to assist in loading Test Cases to Users</description>
    <label>Test Case #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>