force-app/main/default/objects/Test_Cases__c/fields/Test_Category_Classic__c.field-meta.xml
<CustomField>
    <fullName>Test_Category_Classic__c</fullName>
    <formula>Master_Test_Case__r.Test_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Test Category</label>
    <type>Text</type>
</CustomField>