force-app/main/default/objects/Test_Cases__c/fields/Testing_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Testing_Feedback__c</fullName>
    <inlineHelpText>Only use if you have previously PASSED your test case and want to offer Feedback or an Enhancement Request.</inlineHelpText>
    <label>Testing Feedback:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>