force-app/main/default/objects/Test_Cases__c/recordTypes/Master_Test_Cases.recordType-meta.xml
<RecordType>
    <fullName>Master_Test_Cases</fullName>
    <active>true</active>
    <description>Record Type for Test Case Templates to restrict visibility</description>
    <label>Master Test Cases</label>
</RecordType>