force-app/main/default/objects/Test_Cases__c/recordTypes/Test_Cases.recordType-meta.xml
<RecordType>
    <fullName>Test_Cases</fullName>
    <active>true</active>
    <description>Test Case Record Type for Users to See</description>
    <label>Test Cases</label>
</RecordType>