force-app/main/default/objects/Test_Cases__c/recordTypes/Test_Cases_Classic.recordType-meta.xml
<RecordType>
    <fullName>Test_Cases_Classic</fullName>
    <active>false</active>
    <description>Used with the Classic UAT app</description>
    <label>Test Cases (Classic)</label>
</RecordType>