force-app/main/default/objects/Test_Cases__c/validationRules/Results_with_Not_Started_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Results_with_Not_Started_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(Status__c , &quot;Not Started&quot;),
   OR( 
     NOT(ISBLANK(Latest_Actual_Results__c )),
     NOT(ISBLANK(Test_Record_URL__c))
))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>If adding test results, update the Status to PASS or PENDING ISSUE</errorMessage>
</ValidationRule>