force-app/main/default/objects/Test_Cases__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>Complete_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Master_Test_Case__c</columns>
    <columns>Title__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Persona__c</columns>
    <columns>Status__c</columns>
    <columns>Test_Category__c</columns>
    <columns>Tester__c</columns>
    <columns>Task_ID__c</columns>
    <columns>Prerequisites_and_Data__c</columns>
    <columns>Latest_Actual_Results__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Test_Cases__c.Test_Cases</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Issue</value>
    </filters>
    <label>ALL</label>
</ListView>