force-app/main/default/objects/Test_Cases__c/listViews/All_Open_Test_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Test_Cases</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Tester__c</columns>
    <columns>Test_Category__c</columns>
    <columns>Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Task_ID__c</columns>
    <columns>Prerequisites_and_Data__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Pass,Hold,Defer</value>
    </filters>
    <label>All Open Test Cases</label>
</ListView>