force-app/main/default/objects/Test_Cases__c/listViews/All_Test_Cases_with_Issues.listView-meta.xml
<ListView>
    <fullName>All_Test_Cases_with_Issues</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Tester__c</columns>
    <columns>Test_Category__c</columns>
    <columns>Title__c</columns>
    <columns>Latest_Actual_Results__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fail,Ready for Retest</value>
    </filters>
    <label>All Test Cases with Issues</label>
</ListView>