force-app/main/default/objects/Test_Cases__c/listViews/BGR_Test_Cases.listView-meta.xml
<ListView>
    <fullName>BGR_Test_Cases</fullName>
    <columns>NAME</columns>
    <columns>Master_Test_Case__c</columns>
    <columns>Test_Category_Classic__c</columns>
    <columns>Title__c</columns>
    <columns>User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <label>BGR Test Cases</label>
</ListView>