force-app/main/default/objects/Test_Cases__c/listViews/Master_Test_Cases.listView-meta.xml
<ListView>
    <fullName>Master_Test_Cases</fullName>
    <columns>Complete_Date__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Persona__c</columns>
    <columns>Status__c</columns>
    <columns>Test_Category__c</columns>
    <columns>Tester__c</columns>
    <columns>Task_ID__c</columns>
    <columns>Prerequisites_and_Data__c</columns>
    <columns>Latest_Actual_Results__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Test_Cases__c.Master_Test_Cases</value>
    </filters>
    <label>Master Test Cases</label>
</ListView>