force-app/main/default/objects/Test_Cases__c/listViews/My_Test_Cases.listView-meta.xml
<ListView>
    <fullName>My_Test_Cases</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Tester__c</columns>
    <columns>Test_Category__c</columns>
    <columns>Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Running_User_Tester__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Test Cases</label>
</ListView>