force-app/main/default/objects/Test_Cases__c/listViews/Rupture_Disc_Test_Cases.listView-meta.xml
<ListView>
    <fullName>Rupture_Disc_Test_Cases</fullName>
    <columns>NAME</columns>
    <columns>Master_Test_Case__c</columns>
    <columns>Test_Category_Classic__c</columns>
    <columns>Status__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Category__c</field>
        <operation>equals</operation>
        <value>Rupture Disc Part Configurator</value>
    </filters>
    <label>Rupture Disc Test Cases</label>
</ListView>